Add json-server and db.json with the cars list. Add cars: service, feature and model. Modify styles

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1,6 +1,6 @@
 {
     "toolbar": {
-        "display": "Group Volkswagen"
+        "display": "Grupo Volkswagen"
     },
     "languages": {
         "es": "Español",
