Add dialog and dialog car components

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -17,29 +17,36 @@
     "footer": {
         "project": "Proyecto creado por"
     },
+    "brand": {
+        "change": "Selecciona una marca..."
+    },
     "car": {
         "more_cars": "Ver más coches",
         "no_more_cars": "¡No hay más coches!",
         "no_cars": {
             "title": "Nada por aquí",
             "description": "Parece que por el momento lo que buscas no se encuentra en Grupo Volkswagen."
-        }
-    },
-    "item": {
-        "title": {
-            "display": "Título"
         },
-        "description": {
-            "display": "Descripción"
+        "add": "Añadir coche",
+        "fields": {
+            "title": {
+                "display": "Título"
+            },
+            "description": {
+                "display": "Descripción"
+            },
+            "price": {
+                "display": "Precio"
+            },
+            "power": {
+                "display": "Potencia"
+            },
+            "fuel": {
+                "display": "Combustible"
+            }
         },
-        "price": {
-            "display": "Precio"
-        },
-        "power": {
-            "display": "Potencia"
-        },
-        "fuel": {
-            "display": "Combustible"
+        "dialog": {
+            "display": "Coche"
         }
     },
     "filter": {
