--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -17,29 +17,36 @@
     "footer": {
         "project": "Project created by"
     },
+    "brand": {
+        "change": "Select a brand"
+    },
     "car": {
         "more_cars": "See more cars",
         "no_more_cars": "No more cars!",
         "no_cars": {
             "title": "Nothing around here",
             "description": "It seems that what you are looking for is not found on Volkswagen Group at the moment."
-        }
-    },
-    "item": {
-        "model": {
-            "display": "Model"
         },
-        "description": {
-            "display": "Description"
+        "add": "Add car",
+        "fields": {
+            "model": {
+                "display": "Model"
+            },
+            "description": {
+                "display": "Description"
+            },
+            "price": {
+                "display": "Price"
+            },
+            "power": {
+                "display": "Power"
+            },
+            "fuel": {
+                "display": "fuel"
+            }
         },
-        "price": {
-            "display": "Price"
-        },
-        "power": {
-            "display": "Power"
-        },
-        "fuel": {
-            "display": "fuel"
+        "dialog": {
+            "display": "Car"
         }
     },
     "filter": {
